tighten up stock task descriptions

--- a/speedrack/config/test.yaml
+++ b/speedrack/config/test.yaml
@@ -32,14 +32,8 @@ tasks:
   command: python -c "import random, string; print ''.join(random.choice(string.ascii_uppercase) for x in range(random.randrange(60)))"
   interval: 400w
 
-- name: interval failer later
-  description: an interval task that will never naturally run, but will fail at will
-  command: python -c "import random, string; print ''.join(random.choice(string.ascii_uppercase) for x in range(random.randrange(60)))" 1>&2
-  interval: 400w
-  email_recipients: clint.howarth@gmail.com
-
 - name: interval failer later spammer
-  description: an interval task that's Run Now and fails
+  description: an interval task that fails and spams with Run Now
   command: sleep 1 && false
   interval: 400w
   email: chowarth@broadinstitute.org
@@ -47,7 +41,7 @@ tasks:
   max_keep: 50
 
 - name: interval failer stdout stderr
-  description: generates around 10k to stdout and 50k to stderr
+  description: an interval task generating around 10k to stdout and 50k to stderr
   command: python -c "import random, string, sys; print >> sys.stderr, ''.join(random.choice(string.ascii_uppercase) for x in range(random.randrange(48000, 52000))); print ''.join(random.choice(string.ascii_uppercase) for x in range(random.randrange(8000, 12000)))"
   interval: 30m
   max_keep: 20
@@ -57,27 +51,29 @@ tasks:
   command: sleep 1 && false
   interval: 65s
   fail_by_retcode: False
+  max_keep: 30
 
 - name: cron winner stdout
-  description: serves the role of a cron task that succeeds
+  description: a cron task that succeeds
   command: python -c "import random, string; print ''.join(random.choice(string.ascii_uppercase) for x in range(random.randrange(60)))"
   cron: { 'second': 20 }
   max_keep: 20
 
 - name: cron failer status code
-  description: serves the role of a cron task that fails via status code
+  description: a cron task that fails via status code
   command: sleep 1 && false
   cron: { 'second': 21 }
   max_keep: 20
 
 - name: cron winner stderr
-  description: serves the role of a cron task that passes with stderr
+  description: a cron task that passes with stderr
   command: python -c "import random, string, sys; print >> sys.stderr, ''.join(random.choice(string.ascii_uppercase) for x in range(random.randrange(48000, 52000))); print ''.join(random.choice(string.ascii_uppercase) for x in range(random.randrange(8000, 12000)))"
   cron: { 'second': 5 }
+  max_keep: 30
   fail_by_stderr: False
 
 - name: conf error missing command
-  description: serves the role of an interval task that isn't wired right (missing command)
+  description: an interval task with no missing command
   interval: 20w
 
 - name: conf error cron
