--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,9 @@
-AUTHORS.txt
-CHANGES.txt
-LICENSE.txt
-README.rst
-Makefile
-requirements.txt
+include AUTHORS.txt
+include CHANGES.txt
+include LICENSE.txt
+include README.rst
+include Makefile
+include requirements.txt
 recursive-include speedrack/templates *
 recursive-include speedrack/static *
 recursive-include speedrack/config *
